--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,5 +15,5 @@
         android:id="@+id/btn_circle_progress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="CircleProgressView"/>
+        android:text="@string/circle_progress_view"/>
 </RelativeLayout>
